--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongoose": "^6.0.13",
-    "multer": "^1.4.3"
+    "multer": "^1.4.3",
+    "socket.io": "^4.4.0"
   }
 }
